@@ -1,3 +1,7 @@
+2008-01-26  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* features.h: New file, from today's glibc CVS HEAD.
+
 2008-01-25  Neal H. Walfield  <neal@gnu.org>
 
 	* loader.h: Include <stdint.h> and <stdbool.h>.  Don't include
